# Flight-Batter-Estimator

./: CMakeLists.txt  README.md
include/flight_battery_estimator/: flight_battery_estimator.h  waypoint_wind_association_functions.h
src/: flight_battery_estimator.cpp  waypoint_wind_association_functions.cpp
test/: test_flight_battery_estimator.cpp  test_waypoint_wind_association_functions.cpp
